Add feedTitle to episodes/live

--- a/api_src/components/schemas/item_podcast_live.yaml
+++ b/api_src/components/schemas/item_podcast_live.yaml
@@ -30,6 +30,8 @@ properties:
     $ref: '../properties/image_feed.yaml'
   feedId:
     $ref: '../properties/id_feed.yaml'
+  feedTitle:
+    $ref: '../properties/title_feed.yaml'
   feedLanguage:
     $ref: '../properties/language.yaml'
   categories:
