--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -2062,6 +2062,8 @@ components:
           $ref: '#/components/schemas/image_feed'
         feedId:
           $ref: '#/components/schemas/id_feed'
+        feedTitle:
+          $ref: '#/components/schemas/title_feed'
         feedLanguage:
           $ref: '#/components/schemas/language'
         categories:
