--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -155,6 +155,10 @@ components:
     Authorization:
       $ref: 'components/securitySchemes/Authorization.yaml'
 paths:
+  '/search':
+    $ref: 'paths/itunes/search.yaml'
+  '/lookup':
+    $ref: 'paths/itunes/lookup.yaml'
   '/search/byterm':
     $ref: 'paths/search/byterm.yaml'
   '/search/bytitle':
