--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -199,6 +199,51 @@ components:
 
         *Example*: `UXKCGDSYGUUEVQJSYDZH`
   parameters:
+    term_itunes:
+      name: term
+      in: query
+      description: |
+        The term to search for
+      required: true
+      schema:
+        type: string
+      example: batman
+    pretty:
+      name: pretty
+      in: query
+      description: |
+        If present, makes the output “pretty” to help with debugging.
+
+        Parameter shall not have a value
+      schema:
+        type: boolean
+      allowEmptyValue: true
+    id_feed_podcast_itunes:
+      name: id
+      in: query
+      description: |
+        The iTunes Feed ID to search for
+      required: true
+      schema:
+        type: integer
+      examples:
+        id_only:
+          value: 1441923632
+          description: iTunes ID without any prefix
+        prefix:
+          value: id1441923632
+          description: iTunes ID with optional "id" prefix
+    entity:
+      name: entity
+      in: query
+      description: |
+        The iTunes entity type to look in
+      required: true
+      schema:
+        type: string
+        enum:
+          - podcast
+      example: podcast
     q:
       name: q
       in: query
@@ -246,16 +291,6 @@ components:
       schema:
         type: boolean
       allowEmptyValue: true
-    pretty:
-      name: pretty
-      in: query
-      description: |
-        If present, makes the output “pretty” to help with debugging.
-
-        Parameter shall not have a value
-      schema:
-        type: boolean
-      allowEmptyValue: true
     similar:
       name: similar
       in: query
@@ -292,21 +327,6 @@ components:
       schema:
         type: string
       example: https://feeds.theincomparable.com/batmanuniversity
-    id_feed_podcast_itunes:
-      name: id
-      in: query
-      description: |
-        The iTunes Feed ID to search for
-      required: true
-      schema:
-        type: integer
-      examples:
-        id_only:
-          value: 1441923632
-          description: iTunes ID without any prefix
-        prefix:
-          value: id1441923632
-          description: iTunes ID with optional "id" prefix
     guid_feed_podcast:
       name: guid
       in: query
@@ -708,6 +728,204 @@ components:
         type: integer
       example: 1441923632
   schemas:
+    resultCount:
+      description: |
+        Number of items returned in request
+      type: integer
+      example: 1
+    author:
+      description: >
+        The channel-level author element.
+
+
+        Usually iTunes specific, but could be from another namespace if not
+        present.
+      type: string
+      example: Tony Sindelar
+    artworkUrl:
+      description: >
+        A URL for the artwork associated with the returned media type.
+
+
+        Note: Apple returns the image sized to value in the field name but the
+        PodcastIndex returns the original image specified in the feed.
+      type: string
+      example: https://www.theincomparable.com/imgs/logos/logo-batmanuniversity-3x.jpg
+    title_feed_censored:
+      description: |
+        The name of the feed.
+
+        Note: Apple censors the name but PodcastIndex does not.
+      type: string
+      example: Batman University
+    price:
+      description: |
+        Price of content. Will always return 0.
+      type: integer
+      example: 0
+    collectionId:
+      description: |
+        The iTunes Feed ID
+      type: integer
+      example: 1441923632
+    title_feed:
+      description: |
+        Name of the feed
+      type: string
+      example: Batman University
+    view_url:
+      description: |
+        The URL for viewing the feed on the Apple website.
+      type: string
+      example: https://podcasts.apple.com/us/podcast/*/id1441923632?uo=4
+    url_feed:
+      description: |
+        Current feed URL
+      type: string
+      format: URL
+      example: https://feeds.theincomparable.com/batmanuniversity
+    itunes_results:
+      type: object
+      properties:
+        artistName:
+          $ref: '#/components/schemas/author'
+        artworkUrl100:
+          $ref: '#/components/schemas/artworkUrl'
+        artworkUrl30:
+          $ref: '#/components/schemas/artworkUrl'
+        artworkUrl60:
+          $ref: '#/components/schemas/artworkUrl'
+        artworkUrl600:
+          $ref: '#/components/schemas/artworkUrl'
+        collectionCensoredName:
+          $ref: '#/components/schemas/title_feed_censored'
+        collectionExplicitness:
+          description: |
+            Indicates if the feed is marked explicit.
+          type: string
+          enum:
+            - explicit
+            - notExplicit
+            - cleaned
+          example: notExplicit
+        collectionHdPrice:
+          $ref: '#/components/schemas/price'
+        collectionId:
+          $ref: '#/components/schemas/collectionId'
+        collectionName:
+          $ref: '#/components/schemas/title_feed'
+        collectionPrice:
+          $ref: '#/components/schemas/price'
+        collectionViewUrl:
+          $ref: '#/components/schemas/view_url'
+        contentAdvisoryRating:
+          description: |
+            Indicates if the feed is explicit or clean.
+          type: string
+          enum:
+            - Clean
+            - Explicit
+          example: Clean
+        country:
+          description: |
+            The country the feed is from.
+
+            Note: Right now, always returns "USA"
+          type: string
+          example: USA
+        currency:
+          description: |
+            Currency `*Price` value is in.
+
+            Note: will always return "USD"
+          type: string
+          example: USD
+        feedUrl:
+          $ref: '#/components/schemas/url_feed'
+        genreIds:
+          description: >
+            List of ids representing the names in the `genres`.
+
+
+            Values are determined by the IDs used in the url of genres on
+            https://podcasts.apple.com/us/genre/podcasts/id26
+          type: array
+          items:
+            type: integer
+          example:
+            - 1309
+            - 26
+        genres:
+          description: |
+            List of genre names.
+          type: array
+          items:
+            type: string
+          example:
+            - TV & Film
+            - Podcats
+        kind:
+          description: |
+            The kind of content returned by the search request.
+
+            Note: will always return "podcast"
+          type: string
+          example: podcast
+        primaryGenreName:
+          description: |
+            The primary genre name.
+
+            Note: right now, always returns empty string.
+          type: string
+          example: ''
+        releaseDate:
+          description: |
+            Date and time of request
+          type: string
+          example: 2022-10-03T02:17:03-0500
+        trackCensoredName:
+          $ref: '#/components/schemas/title_feed_censored'
+        trackCount:
+          description: |
+            Number of episodes in feed
+          type: integer
+          example: 12
+        trackExplicitness:
+          description: |
+            Indicates if the episode is marked explicit.
+          type: string
+          enum:
+            - explicit
+            - notExplicit
+            - cleaned
+          example: notExplicit
+        trackHdPrice:
+          $ref: '#/components/schemas/price'
+        trackHdRentalPrice:
+          $ref: '#/components/schemas/price'
+        trackId:
+          $ref: '#/components/schemas/collectionId'
+        trackName:
+          $ref: '#/components/schemas/title_feed'
+        trackPrice:
+          $ref: '#/components/schemas/price'
+        trackRentalPrice:
+          $ref: '#/components/schemas/price'
+        trackViewUrl:
+          $ref: '#/components/schemas/view_url'
+        wrapperType:
+          description: |
+            The name of the object returned by the search request.
+
+            Note: will always return "track"
+          type: string
+          example: track
+    itunes_replacement_results:
+      description: |
+        List of feeds matching request
+      type: array
+      items:
+        $ref: '#/components/schemas/itunes_results'
     status:
       description: |
         Indicates API request status
@@ -716,22 +934,16 @@ components:
         - 'true'
         - 'false'
       example: 'true'
+    description_response:
+      description: |
+        Description of the response
+      type: string
+      example: Found matching feed
     id_feed:
       description: |
         The internal PodcastIndex.org Feed ID.
       type: integer
       example: 75075
-    title_feed:
-      description: |
-        Name of the feed
-      type: string
-      example: Batman University
-    url_feed:
-      description: |
-        Current feed URL
-      type: string
-      format: URL
-      example: https://feeds.theincomparable.com/batmanuniversity
     originalUrl:
       description: |
         The URL of the feed, before it changed to the current `url` value.
@@ -757,15 +969,6 @@ components:
         with an analysis of episodes of “Batman: The Animated Series” but has
         now expanded to cover other series, movies, and media. Your professor is
         Tony Sindelar.
-    author:
-      description: >
-        The channel-level author element.
-
-
-        Usually iTunes specific, but could be from another namespace if not
-        present.
-      type: string
-      example: Tony Sindelar
     ownerName:
       description: >
         The channel-level owner:name element.
@@ -1003,11 +1206,6 @@ components:
         Search terms passed to request
       type: string
       example: batman university
-    description_response:
-      description: |
-        Description of the response
-      type: string
-      example: Found matching feed
     id_episode:
       description: |
         The internal PodcastIndex.org episode ID.
@@ -2365,6 +2563,17 @@ components:
           schema:
             type: string
           example: Authorization header value either not set or blank.
+    itunes_replacement:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              resultCount:
+                $ref: '#/components/schemas/resultCount'
+              results:
+                $ref: '#/components/schemas/itunes_replacement_results'
     search_byterm:
       description: Success
       content:
@@ -2810,6 +3019,63 @@ components:
               description:
                 $ref: '#/components/schemas/description_response'
 paths:
+  /search:
+    get:
+      tags:
+        - Apple Replacement
+      summary: Search
+      description: >
+        Replaces the Apple search API but returns data from the Podcast Index
+        database.
+
+
+        Note: No API key needed for this endpoint.
+
+
+        Example:
+
+          - Apple: https://itunes.apple.com/search?media=podcast&entity=podcast&term=batman
+          - PodcastIndex: https://api.podcastindex.org/search?term=batman
+      operationId: search
+      parameters:
+        - $ref: '#/components/parameters/term_itunes'
+        - $ref: '#/components/parameters/pretty'
+      responses:
+        '200':
+          $ref: '#/components/responses/itunes_replacement'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+  /lookup:
+    get:
+      tags:
+        - Apple Replacement
+      summary: Lookup
+      description: >
+        Replaces the Apple podcast lookup API but returns data from the Podcast
+        Index database.
+
+
+        Note: No API key needed for this endpoint.
+
+
+        Example:
+
+          - Apple: https://itunes.apple.com/lookup?media=podcast&entity=podcast&id=1636765656
+          - PodcastIndex: https://api.podcastindex.org/lookup?entity=podcast&id=1636765656
+      operationId: lookup
+      parameters:
+        - $ref: '#/components/parameters/id_feed_podcast_itunes'
+        - $ref: '#/components/parameters/entity'
+        - $ref: '#/components/parameters/pretty'
+      responses:
+        '200':
+          $ref: '#/components/responses/itunes_replacement'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
   /search/byterm:
     get:
       tags:
