Clarify explicitness and primary genre
https://podcastindex.social/@dave/109140511071890860

--- a/api_src/components/schemas/itunes_results.yaml
+++ b/api_src/components/schemas/itunes_results.yaml
@@ -19,9 +19,8 @@ properties:
     type: string
     enum:
       - "explicit"
-      - "notExplicit"
       - "cleaned"
-    example: "notExplicit"
+    example: "cleaned"
   collectionHdPrice:
     $ref: '../properties/price.yaml'
   collectionId:
@@ -97,9 +96,6 @@ properties:
       # language=Markdown
     description: >
       The primary genre name.
-      
-      
-      Note: right now, always returns empty string.
     type: string
     example: ""
   releaseDate:
@@ -123,9 +119,8 @@ properties:
     type: string
     enum:
       - "explicit"
-      - "notExplicit"
       - "cleaned"
-    example: "notExplicit"
+    example: "cleaned"
   trackHdPrice:
     $ref: '../properties/price.yaml'
   trackHdRentalPrice:
