Update returned properties

--- a/api_src/components/properties/feed_itunes.yaml
+++ b/api_src/components/properties/feed_itunes.yaml
@@ -5,6 +5,8 @@ type: object
 properties:
   id:
     $ref: '../properties/id_feed.yaml'
+  podcastGuid:
+    $ref: '../properties/podcastGuid.yaml'
   title:
     $ref: '../properties/title_feed.yaml'
   url:
@@ -45,6 +47,8 @@ properties:
     $ref: '../properties/type.yaml'
   dead:
     $ref: '../properties/dead.yaml'
+  episodeCount:
+    $ref: '../properties/episodeCount.yaml'
   crawlErrors:
     $ref: '../properties/crawlErrors.yaml'
   parseErrors:
