--- a/api_src/components/properties/feed_podcast.yaml
+++ b/api_src/components/properties/feed_podcast.yaml
@@ -39,6 +39,8 @@ properties:
     $ref: '../properties/contentType.yaml'
   itunesId:
     $ref: '../properties/itunesId_feed.yaml'
+  itunesType:
+    $ref: '../properties/itunesType.yaml'
   generator:
     $ref: '../properties/generator.yaml'
   language:
