--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -267,6 +267,14 @@ components:
           - hive
           - webmonetization
       example: ''
+    aponly:
+      name: aponly
+      in: query
+      description: |
+        Only returns feeds with an `itunesId`.
+      schema:
+        type: boolean
+      example: 'true'
     clean:
       name: clean
       in: query
@@ -3116,6 +3124,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/q'
         - $ref: '#/components/parameters/val'
+        - $ref: '#/components/parameters/aponly'
         - $ref: '#/components/parameters/clean'
         - $ref: '#/components/parameters/fulltext'
         - $ref: '#/components/parameters/pretty'
