--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -51,6 +51,8 @@ info:
 
     User created libraries for working with the API:
 
+      - Java
+          - [podcast4j](https://github.com/yusufyilmazfr/podcast4j)
       - .NET
           - [PodcastIndexSharp](https://www.nuget.org/packages/PodcastIndexSharp)
       - Node.js/npm/yarn
