Add support for `recent/data`
Resolves #87

https://podcastindex.social/@dave/106675422002333458

--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -209,6 +209,8 @@ paths:
     $ref: 'paths/recent/feeds.yaml'
   '/recent/newfeeds':
     $ref: 'paths/recent/newfeeds.yaml'
+  '/recent/data':
+    $ref: 'paths/recent/data.yaml'
   '/recent/soundbites':
     $ref: 'paths/recent/soundbites.yaml'
   '/value/byfeedid':
