--- a/api_src/components/parameters/since.yaml
+++ b/api_src/components/parameters/since.yaml
@@ -2,14 +2,7 @@ name: since
 in: query
 # language=Markdown
 description: >
-  Return items since the specified time.
-  The value can be a unix epoch timestamp or a negative integer that represents a number of seconds prior to right now.
+  Return items since the specified epoch timestamp.
 schema:
   type: integer
-examples:
-  timestamp:
-    value: 1612125785
-    description: Unix timestamp
-  seconds:
-    value: -100000
-    description: Seconds from now
+example: 1612125785
