Add liveItems to `episodes/byfeedid`
https://podcastindex.social/@dave/109718058299052160

--- a/api_src/components/responses/episodes_byfeedid.yaml
+++ b/api_src/components/responses/episodes_byfeedid.yaml
@@ -6,6 +6,8 @@ content:
       properties:
         status:
           $ref: '../properties/status.yaml'
+        liveItems:
+          $ref: '../properties/liveItems_podcast.yaml'
         items:
           $ref: '../properties/items_podcast.yaml'
         count:
