--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -3862,8 +3862,13 @@ paths:
       tags:
         - Podcasts
       summary: Dead
-      description: |
+      description: >
         This call returns all feeds that have been marked dead (`dead` == 1)
+
+
+        Dead feeds can also be accessed from object storage at
+        https://public.podcastindex.org/podcastindex_dead_feeds.csv
+
 
         Example: https://api.podcastindex.org/api/1.0/podcasts/dead?pretty
       operationId: podcasts/dead
