--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -4294,6 +4294,13 @@ paths:
         the "Value for Value" methods from the PodcastIndex ID.
 
 
+        Additionally, the value block data can be accessed using static JSON
+        files (updated every 15 minutes).
+
+          - Feeds: https://tracking.podcastindex.org/feedValueBlocks.json
+          - Episodes: https://tracking.podcastindex.org/episodeValueBlocks.json
+
+
         Examples:
 
           - https://api.podcastindex.org/api/1.0/value/byfeedid?id=920666&pretty
@@ -4322,6 +4329,13 @@ paths:
       description: >
         This call returns the information for supporting the podcast via one of
         the "Value for Value" methods from feed URL.
+
+
+        Additionally, the value block data can be accessed using static JSON
+        files (updated every 15 minutes).
+
+          - Feeds: https://tracking.podcastindex.org/feedValueBlocks.json
+          - Episodes: https://tracking.podcastindex.org/episodeValueBlocks.json
 
 
         Examples:
