Add support for socialInteract in some endpoints
- `/episodes/byid`
- `/episodes/byfeedid`
- `/episodes/byfeedurl`
- `/episodes/bypodcastguid`

https://podcastindex.social/@dave/109841177640082189

--- a/api_src/components/schemas/item_podcast_byid.yaml
+++ b/api_src/components/schemas/item_podcast_byid.yaml
@@ -48,6 +48,8 @@ transcripts:
   $ref: '../properties/transcripts.yaml'
 persons:
   $ref: '../properties/persons.yaml'
+socialInteract:
+  $ref: '../properties/socialInteract.yaml'
 value:
   $ref: '../properties/value.yaml'
 soundbite:
