--- a/api_src/components/schemas/item_podcast.yaml
+++ b/api_src/components/schemas/item_podcast.yaml
@@ -58,5 +58,7 @@ properties:
     $ref: '../properties/soundbites.yaml'
   persons:
     $ref: '../properties/persons.yaml'
+  socialInteract:
+    $ref: '../properties/socialInteract.yaml'
   value:
     $ref: '../properties/value.yaml'
