--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1785,6 +1785,8 @@ components:
           $ref: '#/components/schemas/crawlErrors'
         parseErrors:
           $ref: '#/components/schemas/parseErrors'
+        categories:
+          $ref: '#/components/schemas/categories'
         locked:
           $ref: '#/components/schemas/locked'
         funding:
