Add updated description of podcasts/bytag
https://podcastindex.social/@dave/110236825931831170

--- a/api_src/components/schemas/feed_bytag.yaml
+++ b/api_src/components/schemas/feed_bytag.yaml
@@ -50,6 +50,8 @@ properties:
     $ref: '../properties/categories.yaml'
   locked:
     $ref: '../properties/locked.yaml'
+  popularity:
+    $ref: '../properties/trendScore.yaml'
   imageUrlHash:
     $ref: '../properties/imageUrlHash.yaml'
   value:
