--- a/api_src/components/responses/podcasts_bytag.yaml
+++ b/api_src/components/responses/podcasts_bytag.yaml
@@ -10,5 +10,9 @@ content:
           $ref: '../properties/feeds_bytag.yaml'
         count:
           $ref: '../properties/count.yaml'
+        total:
+          $ref: '../properties/total.yaml'
+        nextStartAt:
+          $ref: '../properties/nextStartAt.yaml'
         description:
           $ref: '../properties/description_response.yaml'
