Add description of enclosure parameter for episodes/byfeedid and episodes/byitunesid
https://podcastindex.social/@dave/109954913911423061

--- a/api_src/paths/episodes/byfeedid.yaml
+++ b/api_src/paths/episodes/byfeedid.yaml
@@ -8,12 +8,16 @@ get:
     Episodes are in reverse chronological order.
 
 
+    When using the `enclosure` parameter, only the episode matching the URL is returned.
+
+
     Examples:
 
       - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=75075&pretty
       - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504,920666&pretty
       - Includes `persons`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=169991&pretty
       - Includes `value`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=4058673&pretty
+      - Using `enclosure`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504&enclosure=https://op3.dev/e/mp3s.nashownotes.com/NA-1551-2023-04-30-Final.mp3&pretty
   operationId: episodes/byfeedid
   security:
     - $ref: '../../components/security/security.yaml'
@@ -21,6 +25,7 @@ get:
     - $ref: '../../components/parameters/id_feed_episode_pi.yaml'
     - $ref: '../../components/parameters/since.yaml'
     - $ref: '../../components/parameters/max.yaml'
+    - $ref: '../../components/parameters/enclosure.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
