Add max parameter to search/byperson, search/byterm, search/bytitle, search/music/byterm, podcasts/bymedium
https://podcastindex.social/@dave/110074339879578390

--- a/api_src/paths/search/byperson.yaml
+++ b/api_src/paths/search/byperson.yaml
@@ -26,6 +26,7 @@ get:
     - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/q_person.yaml'
+    - $ref: '../../components/parameters/max.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
