--- a/api_src/paths/search/byterm.yaml
+++ b/api_src/paths/search/byterm.yaml
@@ -14,6 +14,7 @@ get:
   parameters:
     - $ref: '../../components/parameters/q.yaml'
     - $ref: '../../components/parameters/val.yaml'
+    - $ref: '../../components/parameters/max.yaml'
     - $ref: '../../components/parameters/aponly.yaml'
     - $ref: '../../components/parameters/clean.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
