--- a/api_src/paths/search/bytitle.yaml
+++ b/api_src/paths/search/bytitle.yaml
@@ -18,6 +18,7 @@ get:
   parameters:
     - $ref: '../../components/parameters/q.yaml'
     - $ref: '../../components/parameters/val.yaml'
+    - $ref: '../../components/parameters/max.yaml'
     - $ref: '../../components/parameters/clean.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
