--- a/api_src/paths/podcasts/bymedium.yaml
+++ b/api_src/paths/podcasts/bymedium.yaml
@@ -14,6 +14,7 @@ get:
     - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/medium.yaml'
+    - $ref: '../../components/parameters/max.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
     '200':
