Add medium to reply for endpoints:
  - search/byterm
  - search/bytitle
  - search/music/byterm
  - podcasts/byfeedid
  - podcasts/byfeedurl
  - podcasts/byguid
  - podcasts/bymedium

https://podcastindex.social/@dave/110548591729745201

--- a/api_src/components/schemas/feed_search.yaml
+++ b/api_src/components/schemas/feed_search.yaml
@@ -44,6 +44,8 @@ properties:
     $ref: '../properties/explicit_feed.yaml'
   type:
     $ref: '../properties/type.yaml'
+  medium:
+    $ref: '../properties/medium_feed.yaml'
   dead:
     $ref: '../properties/dead.yaml'
   episodeCount:
