--- a/api_src/components/properties/feed_podcast.yaml
+++ b/api_src/components/properties/feed_podcast.yaml
@@ -49,6 +49,8 @@ properties:
     $ref: '../properties/explicit_feed.yaml'
   type:
     $ref: '../properties/type.yaml'
+  medium:
+    $ref: '../properties/medium_feed.yaml'
   dead:
     $ref: '../properties/dead.yaml'
   chash:
