--- a/api_src/paths/search/byterm.yaml
+++ b/api_src/paths/search/byterm.yaml
@@ -17,6 +17,7 @@ get:
     - $ref: '../../components/parameters/max.yaml'
     - $ref: '../../components/parameters/aponly.yaml'
     - $ref: '../../components/parameters/clean.yaml'
+    - $ref: '../../components/parameters/similar.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
