--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -4497,10 +4497,10 @@ paths:
     get:
       tags:
         - Recent
-      summary: Feed Data
+      summary: Recent Data
       description: >
-        This call returns every new feed added to the index over the past 24
-        hours in reverse chronological order.
+        This call returns every new feed and episode added to the index over the
+        past 24 hours in reverse chronological order.
 
 
         This is similar to `/recent/feeds` but uses the date the feed was found
