Add Recent Value Feeds endpoint
https://podcastindex.social/@dave/106043383809192301

--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -213,6 +213,8 @@ paths:
     $ref: 'paths/recent/feeds.yaml'
   '/recent/newfeeds':
     $ref: 'paths/recent/newfeeds.yaml'
+  '/recent/newvaluefeeds':
+    $ref: 'paths/recent/newvaluefeeds.yaml'
   '/recent/data':
     $ref: 'paths/recent/data.yaml'
   '/recent/soundbites':
